apply plugin: "java"
apply plugin: 'maven'  
apply plugin: "maven-publish"
apply plugin: 'eclipse'

sourceCompatibility = 1.7  
targetCompatibility = 1.7

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
tasks.withType(Javadoc) {
    options.encoding = "UTF-8"
}
sourceSets {
    main {
        java {
            srcDirs = ["src"]
        }
    }
}

ext {
	compileDependencies =[
    	'cn.featherfly:featherfly-persistence:latest.integration'
    	,'cn.featherfly:featherfly-sorm:latest.integration'
    	,'org.springframework:spring-jdbc:4.1.6.RELEASE'
    	,'org.springframework:spring-tx:4.1.6.RELEASE'
		]
}

repositories {
	mavenCentral()
	maven {
		url  ant.properties['user.home'] +  "/.m2/repository"
	}	
}

task sourcesJar(type: Jar) {
	classifier "sources"
    from sourceSets.main.java.srcDirs
}

task javadocJar(type: Jar, dependsOn:javadoc) { 
     classifier = "javadoc"
     from javadoc.destinationDir 
}

artifacts {  
    archives jar  
    archives javadocJar  
    archives sourcesJar  
}
 

publishing {
    publications {    	
        mavenJava(MavenPublication) {
        	from components.java
            artifact (sourcesJar) {
             	classifier "sources"
            }
			artifact (javadocJar) {
				classifier "javadoc"
			}
        }
    }    
}
  
dependencies {
	for (def depend : compileDependencies)  {
		compile (depend)
	}
    testCompile (
    	'org.testng:testng:latest.integration'
    )
}
/*
test {
    useTestNG()
    testLogging.showStandardStreams = true
    minHeapSize = "128m"
    maxHeapSize = "512m"
    jvmArgs '-XX:MaxPermSize=256m'
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
    }
}
*/
jar {
    manifest.attributes 'Build-Name': archivesBaseName
	manifest.attributes 'Build-By': "zhong ji"
    manifest.attributes 'Tool' : "gradle"
    manifest.attributes 'Build-Jdk' : ant.properties['java.runtime.version']
    manifest.attributes 'Bundle-License': 'http://www.apache.org/licenses/LICENSE-2.0'
}